<resources>
    <string name="app_name">Smart QR Opener</string>
    <string name="shortcut_scanner_short">Scanner</string>
    <string name="shortcut_scanner_long">Open scanner</string>
    <string name="shortcut_history_short">History</string>
    <string name="shortcut_history_long">Open history</string>
    <string name="shortcut_settings_short">Settings</string>
    <string name="shortcut_settings_long">Open settings</string>
</resources>
