<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="scanner"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_scanner_short"
        android:shortcutLongLabel="@string/shortcut_scanner_long">
        <intent
            android:action="com.smartqropener.action.OPEN_SCANNER"
            android:targetPackage="com.smartqropener"
            android:targetClass="com.smartqropener.app.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="history"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_history_short"
        android:shortcutLongLabel="@string/shortcut_history_long">
        <intent
            android:action="com.smartqropener.action.OPEN_HISTORY"
            android:targetPackage="com.smartqropener"
            android:targetClass="com.smartqropener.app.MainActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="settings"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_settings_short"
        android:shortcutLongLabel="@string/shortcut_settings_long">
        <intent
            android:action="com.smartqropener.action.OPEN_SETTINGS"
            android:targetPackage="com.smartqropener"
            android:targetClass="com.smartqropener.app.MainActivity" />
    </shortcut>
</shortcuts>
